--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 13:23:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG1.a1()[pri:0, instance:TestNgClasses.TestNG1@4b0d79fc]">a1</td> 
+<tr bgcolor="8bd0de">  <td>25/01/04 22:50:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG4_DependsOnMethod.a()[pri:0, instance:TestNgClasses.TestNG4_DependsOnMethod@7e7be63f]">a</td> 
   <td>main@125993742</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 13:23:04</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG1.a2()[pri:0, instance:TestNgClasses.TestNG1@4b0d79fc]">a2</td> 
-  <td>main@125993742</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 13:23:04</td>   <td>-8</td> <td>&nbsp;</td><td title="&gt;&gt;TestNG1.b()[pri:0, instance:TestNgClasses.TestNG1@4b0d79fc]">&gt;&gt;b</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@125993742</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 13:23:04</td>   <td>-10</td> <td title="&gt;&gt;TestNG1.c()[pri:0, instance:TestNgClasses.TestNG1@4b0d79fc]">&gt;&gt;c</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@125993742</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 13:23:04</td>   <td>43</td> <td title="&lt;&lt;TestNG1.d()[pri:0, instance:TestNgClasses.TestNG1@4b0d79fc]">&lt;&lt;d</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@125993742</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 13:23:04</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG1.e()[pri:0, instance:TestNgClasses.TestNG1@4b0d79fc]">&gt;&gt;e</td> 
-<td>&nbsp;</td>  <td>main@125993742</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 13:23:04</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG1.e()[pri:0, instance:TestNgClasses.TestNG1@4b0d79fc]">&gt;&gt;e</td> 
-<td>&nbsp;</td>  <td>main@125993742</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 13:23:04</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG1.f()[pri:0, instance:TestNgClasses.TestNG1@4b0d79fc]">&gt;&gt;f</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@125993742</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 13:23:04</td>   <td>5</td> <td>&nbsp;</td><td title="&lt;&lt;TestNG1.g()[pri:0, instance:TestNgClasses.TestNG1@4b0d79fc]">&lt;&lt;g</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@125993742</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 13:23:04</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG1.h()[pri:0, instance:TestNgClasses.TestNG1@4b0d79fc]">&lt;&lt;h</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@125993742</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 13:23:04</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG1.i()[pri:0, instance:TestNgClasses.TestNG1@4b0d79fc]">&lt;&lt;i</td> 
-<td>&nbsp;</td>  <td>main@125993742</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 13:23:04</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG1.i()[pri:0, instance:TestNgClasses.TestNG1@4b0d79fc]">&lt;&lt;i</td> 
-<td>&nbsp;</td>  <td>main@125993742</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>25/01/04 22:50:12</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG4_DependsOnMethod.b()[pri:0, instance:TestNgClasses.TestNG4_DependsOnMethod@7e7be63f]">b</td> 
+  <td></td>   <td></td> </tr>
 </table>
