--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,21 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Failed suite [Suite]</th></tr>
-<tr><td><a href="#t0">Test(failed)</a></td><td class="num">0</td><td class="num attn">2</td><td class="num">0</td><td class="num attn">1</td><td class="num">23</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">26,774</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Failed suite [Suite]</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test(failed) &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestNgClasses.TestNG4_DependsOnMethod</td><td><a href="#m0">a</a></td><td rowspan="1">1736011473786</td><td rowspan="1">1</td></tr><tr><th colspan="4">Test(failed) &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">TestNgClasses.TestNG3_SkippingTC</td><td><a href="#m1">f</a></td><td rowspan="1">1736011473778</td><td rowspan="1">6</td></tr><tr class="skippedodd"><td rowspan="1">TestNgClasses.TestNG4_DependsOnMethod</td><td><a href="#m2">b</a></td><td rowspan="1">1736011473789</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">TestNgClasses.TestNG5_DataProvider</td><td><a href="#m0">enterData</a></td><td rowspan="3">1736092832742</td><td rowspan="3">8189</td></tr><tr class="passedeven"><td><a href="#m1">enterData</a></td></tr><tr class="passedeven"><td><a href="#m2">enterData</a></td></tr></tbody>
 </table>
-<h2>Test(failed)</h2><h3 id="m0">TestNgClasses.TestNG4_DependsOnMethod#a</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at TestNgClasses.TestNG4_DependsOnMethod.a(TestNG4_DependsOnMethod.java:12)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestNgClasses.TestNG3_SkippingTC#f</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.SkipException: Skipped test method..
-	at TestNgClasses.TestNG3_SkippingTC.f(TestNG3_SkippingTC.java:44)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">TestNgClasses.TestNG4_DependsOnMethod#b</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method TestNG4_DependsOnMethod.b()[pri:0, instance:TestNgClasses.TestNG4_DependsOnMethod@54bff557] depends on not successfully finished methods
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">TestNgClasses.TestNG5_DataProvider#enterData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>abc234BCED</td><td>abc234BCED</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestNgClasses.TestNG5_DataProvider#enterData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>abc234BCED</td><td>abc234BCED</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">TestNgClasses.TestNG5_DataProvider#enterData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>abc@gmail.com</td><td>abc@gmail.com</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
