--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 22:50:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG4_DependsOnMethod.a()[pri:0, instance:TestNgClasses.TestNG4_DependsOnMethod@7e7be63f]">a</td> 
+<tr bgcolor="8bd0de">  <td>25/01/05 21:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG5_DataProvider.enterData(java.lang.String,java.lang.String)[pri:0, instance:TestNgClasses.TestNG5_DataProvider@55634720]">enterData</td> 
   <td>main@125993742</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>25/01/04 22:50:12</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG4_DependsOnMethod.b()[pri:0, instance:TestNgClasses.TestNG4_DependsOnMethod@7e7be63f]">b</td> 
-  <td></td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>25/01/05 21:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG5_DataProvider.enterData(java.lang.String,java.lang.String)[pri:0, instance:TestNgClasses.TestNG5_DataProvider@55634720]">enterData</td> 
+  <td>main@125993742</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>25/01/05 21:30:22</td>   <td>-18577</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG5_DataProvider.setEnvt()[pri:0, instance:TestNgClasses.TestNG5_DataProvider@55634720]">&gt;&gt;setEnvt</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@125993742</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>25/01/05 21:30:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG5_DataProvider.enterData(java.lang.String,java.lang.String)[pri:0, instance:TestNgClasses.TestNG5_DataProvider@55634720]">enterData</td> 
+  <td>main@125993742</td>   <td></td> </tr>
 </table>
