--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bd0de">  <td>25/01/06 23:31:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TakeScreenshotsOnFailure2.doLogin()[pri:0, instance:TestNgClasses.TakeScreenshotsOnFailure2@5ba3f27a]">doLogin</td> 
-  <td>main@125993742</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>25/01/06 23:32:31</td>   <td>38243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TakeScreenshotsOnFailure2.takeScreenshot(org.testng.ITestResult)[pri:0, instance:TestNgClasses.TakeScreenshotsOnFailure2@5ba3f27a]">&lt;&lt;takeScreenshot</td> 
-<td>&nbsp;</td>  <td>main@125993742</td>   <td></td> </tr>
+<tr bgcolor="80cb77">  <td>25/01/07 14:06:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG5_DataProvider.enterData(java.lang.String,java.lang.String)[pri:0, instance:TestNgClasses.TestNG5_DataProvider@9225652]">enterData</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="80cb77">  <td>25/01/07 14:06:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG5_DataProvider.enterData(java.lang.String,java.lang.String)[pri:0, instance:TestNgClasses.TestNG5_DataProvider@9225652]">enterData</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="80cb77">  <td>25/01/07 14:06:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG5_DataProvider.enterData(java.lang.String,java.lang.String)[pri:0, instance:TestNgClasses.TestNG5_DataProvider@9225652]">enterData</td> 
+  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="80cb77">  <td>25/01/07 14:06:03</td>   <td>-18392</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG5_DataProvider.setEnvt()[pri:0, instance:TestNgClasses.TestNG5_DataProvider@9225652]">&gt;&gt;setEnvt</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
 </table>
