--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="80cb77">  <td>25/01/07 14:06:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG5_DataProvider.enterData(java.lang.String,java.lang.String)[pri:0, instance:TestNgClasses.TestNG5_DataProvider@9225652]">enterData</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="80cb77">  <td>25/01/07 14:06:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG5_DataProvider.enterData(java.lang.String,java.lang.String)[pri:0, instance:TestNgClasses.TestNG5_DataProvider@9225652]">enterData</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="80cb77">  <td>25/01/07 14:06:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG5_DataProvider.enterData(java.lang.String,java.lang.String)[pri:0, instance:TestNgClasses.TestNG5_DataProvider@9225652]">enterData</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="80cb77">  <td>25/01/07 14:06:03</td>   <td>-18392</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG5_DataProvider.setEnvt()[pri:0, instance:TestNgClasses.TestNG5_DataProvider@9225652]">&gt;&gt;setEnvt</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="ee64c8">  <td>25/01/09 23:51:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SeleniumGrid.openBrowser(java.lang.String,java.lang.String)[pri:0, instance:SeleniumGridPack.SeleniumGrid@52b1beb6]">openBrowser</td> 
+  <td>TestNG-PoolService-1@1456273826</td>   <td></td> </tr>
+<tr bgcolor="ee64c8">  <td>25/01/09 23:51:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SeleniumGrid.openBrowser(java.lang.String,java.lang.String)[pri:0, instance:SeleniumGridPack.SeleniumGrid@52b1beb6]">openBrowser</td> 
+  <td>TestNG-PoolService-1@1456273826</td>   <td></td> </tr>
 </table>
